--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "serverless": "^2.29.0",
-    "serverless-finch": "^2.6.0",
-    "typescript": "~4.3.5",
+    "serverless-finch": "^2.8.0",
+    "typescript": "^3.9.5",
     "yup": "^0.29.1"
   },
   "devDependencies": {
@@ -72,5 +72,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8"
   }
 }
